# Vex

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  README.md
.githooks/: pre-commit
.github/workflows/: cmake-multi-platform.yml
cmake/: GitHooks.cmake  VexConfig.cmake.in  VexDX12.cmake  VexDXC.cmake  VexHelpers.cmake  VexSlang.cmake  VexVulkan.cmake
examples/: CMakeLists.txt  CompileShader.bat  ExampleApplication.cpp  ExampleApplication.h  ExamplePaths.h  GLFWIncludes.h  Platform.hlsli  out.spv  shader.hlsl  shader.spv  shader.spv-asm  shader_bytecode.spvasm
examples/example_hello_triangle/: CMakeLists.txt  HelloTriangleApplication.cpp  HelloTriangleApplication.h  HelloTriangleShader.cs.hlsl  HelloTriangleShader2.cs.hlsl  main.cpp
examples/example_hello_triangle_graphics_pipeline/: HelloTriangleGraphicsApplication.cpp  HelloTriangleGraphicsShader.hlsl  main.cpp
examples/hdr/: HDR.cpp  HDR.h  HDR.hlsl  HDR.slang  readme.md
examples/hello_benchmark/: Dummy.cs.hlsl  main.cpp
examples/hello_cube/: HelloCube.cpp  HelloCube.h  HelloCubeShader.hlsl  HelloCubeShader.slang  README.md  main.cpp
examples/hello_raytracing/: HelloRayTracing.cpp  HelloRayTracing.h  HelloRayTracingShader.hlsl  HelloRayTracingShader.slang  README.md  main.cpp
examples/hello_slang_modules/: FooUtils.slang  HelloSlangModule.cpp  MathUtils.slang  Noise.slang  SlangModuleShaders.h
examples/hello_triangle/: HelloTriangleApplication.cpp  HelloTriangleApplication.h  HelloTriangleShader.cs.hlsl  HelloTriangleShader.slang  HelloTriangleShader2.cs.hlsl  HelloTriangleShader2.slang  main.cpp
examples/hello_triangle_graphics_pipeline/: HelloTriangleGraphicsApplication.cpp  HelloTriangleGraphicsApplication.h  HelloTriangleGraphicsShader.hlsl  HelloTriangleGraphicsShader.slang  main.cpp
examples/hello_upload_download/: BoxBlur.hlsl  BoxBlur.slang  Transform.hlsl  main.cpp
examples/hello_windowless/: Dummy.hlsl  README.md  main.cpp
examples/imgui/: ImGuiApplication.cpp  ImGuiApplication.h  ImGuiRenderExtension.cpp  ImGuiRenderExtension.h  README.md  VexImgui.h  main.cpp
examples/pix_events/: PixEventsApplication.cpp  PixEventsApplication.h  PixEventsRenderExtension.cpp  PixEventsRenderExtension.h  README.md  VexPixEvents.cpp  VexPixEvents.h  main.cpp
examples/render_doc/: README.md  RenderDocApplication.cpp  RenderDocApplication.h  RenderDocRenderExtension.cpp  RenderDocRenderExtension.h  VexRenderDoc.cpp  VexRenderDoc.h  main.cpp
examples/tests/: README.md  main.cpp
scripts/: VexTests.py
shaders/: MipGeneration.hlsl  Vex.hlsli  Vex.slang
src/: Formats.h  GfxBackend.cpp  GfxBackend.h  PlatformWindow.h  RHIFwd.h  RHITypes.h  Types.h  Vex.cpp  Vex.cppm  Vex.h  VexMacros.h
src/DX12/: DX12AgilitySDK.cpp  DX12Buffer.cpp  DX12Buffer.h  DX12CommandList.cpp  DX12CommandList.h  DX12CommandPool.cpp  DX12CommandPool.h  DX12Debug.cpp  DX12Debug.h  DX12DescriptorHeap.h  DX12DescriptorPool.cpp  DX12DescriptorPool.h  DX12FeatureChecker.cpp  DX12FeatureChecker.h  DX12Fence.cpp  DX12Fence.h  DX12Formats.h  DX12GraphicsPipeline.cpp  DX12GraphicsPipeline.h  DX12Headers.h  DX12PhysicalDevice.cpp  DX12PhysicalDevice.h  DX12PipelineState.cpp  DX12PipelineState.h  DX12RHI.cpp  DX12RHI.h  DX12RHIAccessor.cpp  DX12RHIAccessor.h  DX12RHIFwd.h  DX12RHITypes.h  DX12ResourceLayout.cpp  DX12ResourceLayout.h  DX12Sampler.cpp  DX12Sampler.h  DX12Shader.cpp  DX12Shader.h  DX12ShaderTable.cpp  DX12ShaderTable.h  DX12States.cpp  DX12States.h  (+11 more)
src/RHI/: RHI.h  RHIAccelerationStructure.cpp  RHIAccelerationStructure.h  RHIAllocator.cpp  RHIAllocator.h  RHIBarrier.cpp  RHIBarrier.h  RHIBindings.h  RHIBuffer.cpp  RHIBuffer.h  RHICommandList.cpp  RHICommandList.h  RHICommandPool.cpp  RHICommandPool.h  RHIDescriptorPool.cpp  RHIDescriptorPool.h  RHIDescriptorSet.cpp  RHIDescriptorSet.h  RHIFeatureChecker.h  RHIFence.cpp  RHIFence.h  RHIFwd.h  RHIPhysicalDevice.cpp  RHIPhysicalDevice.h  RHIPipelineState.h  RHIResourceLayout.cpp  RHIResourceLayout.h  RHIScopedDebugMarker.h  RHIScopedGPUEvent.cpp  RHIScopedGPUEvent.h  RHISwapChain.h  RHITexture.h  RHITimestampQueryPool.cpp  RHITimestampQueryPool.h
src/ShaderCompiler/: RayTracingShaderKey.cpp  RayTracingShaderKey.h  Shader.cpp  Shader.h  ShaderCompiler.cpp  ShaderCompiler.h  ShaderCompilerSettings.h  ShaderEnvironment.h  ShaderKey.h
src/Tests/: SynchronizationTorture.cpp  SynchronizationTorture.h  TextureUpload.cpp  TextureUpload.h  TextureUploadReadback.cpp  TextureUploadReadback.h  TextureUploadTests.cpp
src/Vex/: AccelerationStructure.h  Bindings.cpp  Bindings.h  Buffer.cpp  Buffer.h  BuildAccelerationStructure.h  ByteUtils.h  CommandContext.cpp  CommandContext.h  CommandQueueType.h  Concepts.h  Debug.h  DrawHelpers.h  FeatureChecker.cpp  FeatureChecker.h  Formats.cpp  Formats.h  Formattable.h  FrameResource.h  GfxBackend.cpp  GfxBackend.h  Graphics.cpp  Graphics.h  GraphicsImpl.h  GraphicsPipeline.h  Handle.h  Hash.h  Logger.cpp  Logger.h  MemoryAllocation.h  NonNullPtr.h  PhysicalDevice.cpp  PhysicalDevice.h  PipelineState.cpp  PipelineState.h  PipelineStateCache.cpp  PipelineStateCache.h  PlatformWindow.h  QueueType.h  RHI.h  (+40 more)
src/Vulkan/: Formats.h  VkBuffer.cpp  VkBuffer.h  VkCommandList.cpp  VkCommandList.h  VkCommandPool.cpp  VkCommandPool.h  VkCommandQueue.cpp  VkCommandQueue.h  VkDebug.cpp  (+37 more)
tests/: AccelerationStructureTest.cpp  BufferViewTest.cpp  CMakeLists.txt  ClearTests.cpp  GraphicsBackendTest.cpp  GraphicsTest.cpp  MipGenerationTest.cpp  RayTracingTest.cpp  ReflectionTest.cpp  RenderDoc.cpp  RenderDoc.h  ShaderCompileContextTest.cpp  SynchronisationTest.cpp  SynchronizationTest.cpp  UploadReadbackTest.cpp  VexTest.h
tests/shaders/: BufferView.cs.hlsl  BufferView.cs.slang  RayTracingAABB.hlsl  RayTracingAABB.slang  RayTracingTest.hlsl  RayTracingTest.slang  ScalarBlockLayoutTest.hlsl  ScalarBlockLayoutTest.slang  VertexInputLayoutTest.hlsl  VertexInputLayoutTest.slang
tests/shaders/reflection/: Semantics.hlsl  Semantics.slang
tools/GenerateBuiltInShaders/: CMakeLists.txt  GenerateBuiltInShaders.cpp
(+182 files in other folders)
